--- a/NLPD_use_example.ipynb
+++ b/NLPD_use_example.ipynb
@@ -33,14 +33,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
         "import sys\n",
         "import os\n",
         "\n",
-        "sys.path.append(os.path.abspath('../NLPD'))"
+        "sys.path.append(os.path.abspath('./NLPD'))"
       ]
     },
     {
